BUG - overflowing width on Edge mobile

--- a/css/elements/_colophon.scss
+++ b/css/elements/_colophon.scss
@@ -23,8 +23,7 @@ footer#colophon {
 
 button#return_to_top {
 	@media screen and (max-width: 767px) {
-		width: calc(100% - 2rem);
-		margin: 1rem;
+		display: none !important;
 	}
 	@media screen and (min-width: 768px) {
 		position: fixed;
