--- a/style.css
+++ b/style.css
@@ -813,8 +813,7 @@ header#masthead {
 
 @media screen and (max-width: 767px) {
   button#return_to_top {
-    width: calc(100% - 2rem);
-    margin: 1rem; } }
+    display: none !important; } }
 
 @media screen and (min-width: 768px) {
   button#return_to_top {
